test for get post and create post
