# src/gateway/docs/swagger.yaml
@@ -22,7 +22,7 @@ tags:
 
 
 paths:
-  /user/register:
+  /users/register:
     post:
       tags:
         - User
@@ -68,7 +68,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-  /user/login:
+  /users/login:
     post:
       tags:
         - User
@@ -109,7 +109,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
   
-  /post:
+  /posts:
     post:
       tags:
         - Post
@@ -185,7 +185,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-  /post/{id}:
+  /posts/{id}:
     get:
       tags:
         - Post
